# vultisig-cli

./: .cursorrules  .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  test.sh  test_eth_tx.json  vultisig-config.yaml
.claude/: rules.md
.github/workflows/: ci.yml
bindings/: TWBarz.yaml  TWCryptoBoxPublicKey.yaml  TWCryptoBoxSecretKey.yaml  TWEthereum.yaml  TWMessageSigner.yaml  TWWalletConnectRequest.yaml
crates/app/: Cargo.toml  build.rs  test_qr.rs
crates/app/examples/: test_dense_qr.rs  test_qr.rs
crates/app/proto/: commondata.proto  keyshare.proto  vultisig_extensions.proto
crates/app/src/: broadcaster.rs  commondata.rs  dense_qr.rs  engines.rs  keyshare.rs  keysign_message.rs  lib.rs  local_discovery.rs  local_server.rs  main.rs  mpc_coordinator.rs  network.rs  qr.rs  relay_client.rs  relay_server.rs  session.rs  signing.rs  tss.rs  wallet_core.rs  wallet_core_ffi.rs  websocket.rs
crates/app/src/tests/: bip32_derivation_test.rs  comprehensive_keyshare_test.rs  create_vault_json_test.rs  load_keyshare_test.rs  mod.rs  tss_integration_test.rs
crates/app/src/tests/keyshares/: keyshare-details-TestFastVault-44fd-share1of2-Vultiserver.json
crates/app/tests/: integration_tests.rs
scripts/: build-wallet-core.sh  echo.js  get_address.js  inspect_keyshare.js  inspect_keyshare.rs
specs/: imp.md  mediator.md  qr.md  relay-spec.md  sign.md  signtx-spec.md
