[workspace]
members = [
    "crates/*"
]
exclude = [
    "third_party/dkls23",
    "third_party/multi-party-schnorr",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
# Core async and serialization
tokio = { version = "1.40", features = ["full", "parking_lot"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"

# Protobuf
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

# Crypto dependencies
secp256k1 = { version = "0.28", features = ["global-context", "rand-std", "recovery"] }
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }

# Test utilities
tokio-test = "0.4"
tempfile = "3.8"
assert_matches = "1.5"
pretty_assertions = "1.4"
mockall = "0.12"

# Build dependencies
cmake = "0.1"