[package]
name = "vultisig"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
# Use workspace dependencies where possible
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Crypto dependencies (shared)
secp256k1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
bs58 = "0.5"

# CLI specific
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
rpassword = "7.0"

# For TTY detection
is-terminal = "0.4"

# Network/Protocol
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
warp = "0.3"
mdns-sd = "0.11"
hostname = "0.4"

# Encoding/Compression
rlp = "0.5"
base64 = "0.22"
bincode = "1.3"
flate2 = "1.0"
lzma-rs = "0.3"
url = "2.5"
urlencoding = "2.1"

# Crypto utilities
num-bigint = { version = "0.4", features = ["serde"] }
hmac = "0.12.1"
ripemd = "0.1"
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
md5 = "0.7"
derivation-path = "0.2"
rand = "0.8"
bitcoin = { version = "0.31", features = ["std"] }
bech32 = "0.9"

# Trust Wallet Core modules for address generation
tw_utxo = { path = "../../third_party/wallet-core/rust/frameworks/tw_utxo" }
tw_coin_registry = { path = "../../third_party/wallet-core/rust/tw_coin_registry" }
tw_coin_entry = { path = "../../third_party/wallet-core/rust/tw_coin_entry" }
tw_bitcoin = { path = "../../third_party/wallet-core/rust/chains/tw_bitcoin" }
tw_cosmos = { path = "../../third_party/wallet-core/rust/chains/tw_cosmos" }
tw_any_coin = { path = "../../third_party/wallet-core/rust/tw_any_coin" }

# UI/QR
qrcode = "0.14"
image = "0.24"

# System
if-addrs = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

# TSS protocol dependencies
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
curve25519-dalek = { version = "4.1", features = ["serde"] }

# MPC engines
sl-dkls23 = { path = "../../third_party/dkls23" }
multi-party-schnorr = { path = "../../third_party/multi-party-schnorr", features = ["eddsa", "serde"] }
sl-mpc-mate = { version = "1.0.1-beta", features = ["simple-relay"] }

# Trust Wallet Core Rust crates (for address derivation)
tw_evm = { path = "../../third_party/wallet-core/rust/tw_evm" }
tw_hash = { path = "../../third_party/wallet-core/rust/tw_hash" }
tw_keypair = { path = "../../third_party/wallet-core/rust/tw_keypair" }
tw_encoding = { path = "../../third_party/wallet-core/rust/tw_encoding" }
tw_memory = { path = "../../third_party/wallet-core/rust/tw_memory" }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
# Test utilities
tokio-test = { workspace = true }
tempfile = { workspace = true }
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
mockall = { workspace = true }
futures-util = "0.3"

[features]
default = ["wallet-core"]  # Enable wallet-core by default for full integration
wallet-core = []  # Enable wallet-core integration
dev-mode = []     # Development features

[[bin]]
name = "vultisig"
path = "src/main.rs"

# Integration test configuration
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"